<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e愿</string>
    <string name="action_settings">Settings</string>
    <string name="commit">发布</string>
	<string name="back">返回</string>
	<string name="filter">筛选</string>
	<string name="me">个人</string>
	<string name="set">设置</string>
	<string name="message">消息</string>
	<string name="filt_all">全部</string>
	<string name="filt_own">本校</string>
	<string name="register_mail">请输入Email账户</string>
	<string name="register_pwd">输入密码</string>
	<string name="register_pwdaffirm">确认密码</string>
	<string name="register_complete">完成注册</string>
	<string name="photo">照片</string>
	<string name="image">表情</string>
	<string name="location">定位</string>
	<string name="inputwish">在这里输入你的愿望吧 ：)</string>
	<string name="login_sina">通过新浪微博登录</string>
	<string name="login_qq">通过QQ登录</string>
	<string name="username">用户名/邮箱</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register1">还没有账户？赶紧</string>
	<string name="register2">注册</string>
	<string name="register3">一个</string>
	<string name="avatar">头像</string>
	<string name="info_name">昵称：</string>
	<string name="info_integral">许愿星：</string>
	<string name="info_sex">性别：</string>
	<string name="info_province">省份：</string>
	<string name="info_school">学校：</string>
	<string name="comments">给TA留言</string>
	<string name="achieve">帮TA实现</string>
	<string name="wishhint">愿望内容</string>
	<string name="inputcomment">在这里写下你的留言吧 ：)</string>
	<string name="integral">积分</string>
	<string name="lamp">神灯</string>
	<string name="edit">编辑</string>
	<string name="mine">关于我</string>
	<string name="mywish">我发布的愿望</string>
	<string name="otherwish">我帮别人实现的愿望</string>
	<string name="achieving">正在实现</string>
	<string name="achieved">已实现</string>
	<string name="unachieve">未实现</string>
	<string name="about">关于我们</string>
	<string name="opinion">意见反馈</string>
	<string name="assess">评价一下</string>
	<string name="update">检查更新</string>
	<string name="quit_account">推出当前账户</string>
	<string name="confirm">确认已帮TA实现</string>
	<string name="cancel">取消帮TA实现</string>
	<string name="iknow">我知道了</string>
	<string name="thank">谢谢你为别人的愿望作出的努力！</string>
	<string name="wait">下面就等对方确认你成功帮TA完成了愿望了哦：)</string>
	<string name="cancle_confirm">真的要取消帮他实现愿望吗？</string>
	<string name="cancle">是的，取消</string>
	<string name="stopservice">退出后是否仍要接受消息？</string>
	<string name="exit">退出</string>
	<string name="cancle_exit">取消</string>
	<string name="text_exit">确定要退出吗？</string>
	
	<color name="titleBackground">#add8e6</color>
	<color name="buttonBackground">#33CCFF</color>
	<color name="textColor">#333333</color>
	<color name="hintColor">#c0c0c0</color>
	<color name="Background">#f5fffa</color>
	<color name="white">#f7f7f7</color>
	<color name="black">#000000</color>
	<color name="gray">#333333</color>
	<color name="alert">#ff0000</color>
</resources>