<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/register_edit_bg"
            android:hint="@string/register_mail"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space3"
            android:text="密码" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:background="@drawable/register_edit_bg"
            android:hint="@string/register_pwd"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space3"
            android:text="确认密码" />

        <EditText
            android:id="@+id/pwdaffirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:background="@drawable/register_edit_bg"
            android:hint="@string/register_pwdaffirm"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_size_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/alert" />

    <Button
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/register_complete_btn_up" />

</LinearLayout>